# mcp-taiwan-weather

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: http_server.py  main.py  server.py
src/core/: config.py
src/protocol/: base_server.py  sse_server.py  stdio_server.py
src/tools/: definitions.py
src/weather/: cache.py  cwa_client.py  dataset_mapping.py
